Use Playfield flexbox

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,5 +1,7 @@
 <!doctype html>
 <html lang="en">
+<link rel="stylesheet" href="src/css/index.css">
+</link>
 
 <head>
     <meta charset="UTF-8" />
